--- a/style.css
+++ b/style.css
@@ -4,3 +4,18 @@
     width: 1200px;
     margin:auto;
 }
+.div1{
+    background-color: rgb(37, 37, 37);
+    height: 300px;
+    width: 500px;
+    margin:50px;
+    float: left;
+}
+.div2{
+    background-color: rgb(37, 37, 37);
+    height: 300px;
+    width: 500px;
+    margin:50px;
+    float: left;
+}
+
