--- a/style.css
+++ b/style.css
@@ -18,4 +18,12 @@
     margin:50px;
     float: left;
 }
+div11{
+    background-color: rgb(255, 239, 239);
+    height: 100px;
+    width: 400px;
+    margin:10px;
+
+}
+}
 
