--- a/style.css
+++ b/style.css
@@ -18,12 +18,19 @@
     margin:50px;
     float: left;
 }
-div11{
+.div11{
     background-color: rgb(255, 239, 239);
     height: 100px;
     width: 400px;
     margin:10px;
 
 }
+.div12{
+    background-color: rgb(255, 239, 239);
+    height: 100px;
+    width: 400px;
+    margin:10px;
+
 }
+
 
