--- a/style.css
+++ b/style.css
@@ -31,6 +31,22 @@
     width: 430px;
     margin:30px;
 
+}.div21{
+        background-color: rgb(255, 239, 239);
+    height: 250px;
+    width: 200px;
+    margin:20px;
+    float: left;
+
+}
+
+.div22{
+        background-color: rgb(255, 239, 239);
+    height: 250px;
+    width: 200px;
+    margin:20px;
+    float: left;
+
 }
 
 
